Budget Sharing with other user
