# backend/Core/MyBudget.Infrastructure/Application/Budgets/GetBudgetsQueryHandler.cs
@@ -22,9 +22,11 @@ public sealed class GetBudgetsQueryHandler(BudgetContext context, IRequestContex
             .Select(x => new BudgetDTO(x.Id,
                     x.Name,
                     x.Description,
+                    x.OwnerId,
                     (BudgetDTOStatus)x.Status,
                     x.CreationDate,
-                    x.Categories.Select(y => new CategoryDTO(y.Name, (CategoryDTOStatus)y.Status))
+                    x.Categories.Select(y => new CategoryDTO(y.Name, (CategoryDTOStatus)y.Status)),
+                    x.Shares.Select(y => new ShareDTO(y.UserId, y.UserName))
                 )
             ).ToList();
     }
